<resources>
    <string name="app_name">NoticeTimer</string>
    <string name="btn_10MIN">"+10\nmin"</string>
    <string name="btn_1MIN">"+1\nmin"</string>
    <string name="btn_10SEC">+10\nsec</string>
    <string name="btn_1SEC">+1\nsec</string>
    <string name="btn_START">START</string>
    <string name="btn_STOP">STOP</string>
    <string name="btn_CLEAR">CLEAR</string>
    <string name="btn_SET">SET</string>
    <string name="btn_TIPS">TIPS</string>
    <string name="COMMENT">Please display this screen while the timer is running</string>

    <string-array name="list_history">
        <item>history</item>
        <item>timer 1</item>
        <item>timer 2</item>
        <item>timer 3</item>
        <item>timer 4</item>
        <item>timer 5</item>
    </string-array>

</resources>