<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="#555599"
        android:textSize="60sp"
        android:gravity="center"
        android:background="@drawable/bak_grad2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_10min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="on10min"
            android:textSize="17dp"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"
            android:text="@string/btn_10MIN" />


        <Button
            android:id="@+id/btn_1min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="on1min"
            android:textSize="17dp"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"
            android:text="@string/btn_1MIN" />

        <Button
            android:id="@+id/btn_10sec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="on10sec"
            android:textSize="17dp"
            android:textStyle="bold"
            android:text="@string/btn_10SEC" />

        <Button
            android:id="@+id/btn_1sec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="on1sec"
            android:textSize="17dp"
            android:textStyle="bold"
            android:text="@string/btn_1SEC" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:onClick="onStart"
        android:background="@color/cardview_shadow_start_color"
        android:textColor="@color/design_default_color_primary_variant"
        android:textStyle="bold"
        android:textSize="26dp"
        android:text="@string/btn_START" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClear"
        android:background="@color/cardview_shadow_start_color"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        android:textSize="26dp"
        android:text="@string/btn_CLEAR" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_img_alarm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/bak_grad2"
            android:onClick="onAlarm"
            android:src="@drawable/alarm_1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_img_light"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/bak_grad2"
            android:onClick="onLight"
            android:src="@drawable/light_1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_img_vaib"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/bak_grad2"
            android:onClick="onVaib"
            android:src="@drawable/vaib_1"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/text_volume"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center|right"
        android:text="1"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="@drawable/bak_grad2"
        />


        <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:progress="5"
        android:max="15"
        android:progressBackgroundTint="@color/design_default_color_primary_variant"
        android:background="@drawable/bak_grad2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/text_comment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/COMMENT"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/design_default_color_error"
        android:background="@drawable/bak_grad2"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@null"
            android:background="@drawable/btn_round2"
            android:entries="@array/list_history"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="onSet"
            android:text="@string/btn_SET"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

            <!--android:textSize="26dp"-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        android:background="@drawable/bak_grad2"
        android:orientation="horizontal">

        <!--
        <TextView
            android:id="@+id/text_space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center|right"
            android:text=""
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="@color/green_200"/>
        -->
        <Button
            android:id="@+id/btn_tips"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_start_color"
            android:onClick="onTips"
            android:text="@string/btn_TIPS"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <!--android:textSize="26dp"-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <!--
        <TextView
            android:id="@+id/dummy_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="dummy" />
            -->

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4924620089567925/8096220828">
            </com.google.android.gms.ads.AdView>

    </LinearLayout>

    <!--
        本番
    ads:adUnitId="ca-app-pub-4924620089567925/8096220828">
        テスト
    ads:adUnitId="ca-app-pub-3940256099942544/9214589741">
    -->

</androidx.constraintlayout.widget.ConstraintLayout>